fix(bug): fix title wrap

--- a/assets/css/_partial/_archive/_terms.scss
+++ b/assets/css/_partial/_archive/_terms.scss
@@ -59,7 +59,6 @@
 .archive-item-link {
   min-width: 10%;
   overflow: hidden;
-  white-space: nowrap;
   text-overflow: ellipsis;
 
   &:hover {
